--- a/create-react-solution/template/src/index.html
+++ b/create-react-solution/template/src/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="ru">
   <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>App</title>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <base href="/" />
     <script type="module" src="index.tsx"></script>
   </head>
-  <body data-attr="1" class="test example" id="9999">
+  <body>
     <div id="root"></div>
   </body>
 </html>
